# dsci-6650-coursework

./: README.md
assignment-1/code/: .gitignore  README.md  assignment-1.ipynb  pyproject.toml
assignment-2/code/: README.md  assignment-2.ipynb  pyproject.toml
