[project]
name = "assignment-2"
version = "0.1.0"
description = "Solution to DSCI-6650 Assignment 2, Spring, 2025"
authors = [{ name = "Mitch Sullivan", email = "sullivan.mitch@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
